--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,19 @@ jobs:
           GITHUB_PAGES: true
           GITHUB_REPOSITORY: ${{ github.repository }}
 
+      - name: Verify build output
+        run: |
+          if [ ! -d "dist" ]; then
+            echo "Error: dist directory not found!"
+            exit 1
+          fi
+          if [ ! -f "dist/index.html" ]; then
+            echo "Error: dist/index.html not found!"
+            exit 1
+          fi
+          echo "Build verification successful"
+          ls -la dist/
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
